tests/negative/neg_pr1112a_shared_string_field.safe
package neg_pr1112a_shared_string_field

   type settings is record
      text : string;

   shared cfg : settings;
